--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-scroll-box": "^0.3.5",
-    "react-svg": "^11.0.9"
+    "react-svg": "^11.0.9",
+    "serialize-javascript": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
