--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-scripts": "3.3.0",
     "react-scroll-box": "^0.3.5",
     "react-svg": "^11.0.9",
-    "serialize-javascript": "^2.1.2"
+    "serialize-javascript": "^2.1.2",
+    "simple-react-audio-player": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.8.3"
   }
 }
